{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 52,
  "lineage": "e4b8b23b-b3f0-c64a-2558-adcb0ed03fa8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:341707006720:instance/i-02d0ad80bc357d04e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "machine-instance20210408151918988600000002",
            "id": "i-02d0ad80bc357d04e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20210408151918664800000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7e1b1769a2e9beb",
            "private_dns": "ip-10-10-1-87.ec2.internal",
            "private_ip": "10.10.1.87",
            "public_dns": "ec2-34-230-51-155.compute-1.amazonaws.com",
            "public_ip": "34.230.51.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d0a5004dd2b61de",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae89ffbbf7e6a7bc",
            "tags": {
              "Name": "vouch-operations"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd38c7c31180df78"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.machine",
            "aws_iam_role.machine",
            "aws_key_pair.developer",
            "aws_security_group.machine_access",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_ami.amazon_linux",
            "data.cloudinit_config.init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341707006720:internet-gateway/igw-04d244e31c20e0bb2",
            "id": "igw-04d244e31c20e0bb2",
            "owner_id": "341707006720",
            "vpc_id": "vpc-0c846721068bb9b45"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0738506f75077b22e",
            "owner_id": "341707006720",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d244e31c20e0bb2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c846721068bb9b45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4a35b4d10d74da",
            "route_table_id": "rtb-0738506f75077b22e",
            "subnet_id": "subnet-0ae89ffbbf7e6a7bc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "machine_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341707006720:security-group/sg-0dd38c7c31180df78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd38c7c31180df78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vouch-operations20210408151929969300000004",
            "name_prefix": "vouch-operations",
            "owner_id": "341707006720",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c846721068bb9b45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341707006720:subnet/subnet-0ae89ffbbf7e6a7bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0ae89ffbbf7e6a7bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341707006720",
            "vpc_id": "vpc-0c846721068bb9b45"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341707006720:vpc/vpc-0c846721068bb9b45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-070b12d9a88afa499",
            "default_route_table_id": "rtb-08d6c21a25bca60e1",
            "default_security_group_id": "sg-0ea5e13abdccbd40a",
            "dhcp_options_id": "dopt-7a4c5e18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c846721068bb9b45",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08d6c21a25bca60e1",
            "owner_id": "341707006720"
          }
        }
      ]
    }
  ]
}